# AdventOfCode2024

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  advent.cpp  day.hpp  timing.hpp  util.cpp  util.hpp
src/: CMakeLists.txt  advent.cpp  benchmarks.cpp  circular_buffer.hpp  day.hpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  hashing.hpp  point.hpp  spinner.cpp  tests.cpp  threading.cpp  threading.hpp  timing.hpp  util.cpp  util.hpp
